--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,3 +44,8 @@ body {
   background-color: white;
   border-radius: 10px;
 }
+
+.ant-spin-container {
+  background-color: white;
+  padding: 5px;
+}
